# docker-fastapi-demo

./: .gitattributes  .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml
frontend/static/: index.html
scripts/: rebuild.sh  start.sh
